fix overflow x

--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -36,7 +36,7 @@
 }
 
 .circle-container {
-  @apply absolute w-[78rem] -translate-x-1/2 -translate-y-1/2 rounded-full top-[65%] left-1/2;
+  @apply absolute w-[78rem] -translate-x-1/2 -translate-y-1/2 rounded-full top-[60%] left-1/2;
 
   span {
     @apply absolute border border-light-lavender/10 aspect-square w-[370px] -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2 rounded-full;
